--- a/tela-inicial/style.css
+++ b/tela-inicial/style.css
@@ -117,3 +117,54 @@ header h1 {
 ::-webkit-scrollbar {
   width: 1px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#conteudo-jogo {
+  background-color: black;
+}
+
+
+.grid-jogo {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 5px;
+}
+
+.grid-jogo-pequeno {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-columns: 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px;
+  gap: 1px;
+  position:relative
+}
+
+.vencedor {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Um fundo escuro transparente */
+  display: none; /* Inicialmente invisível */
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+
+}
+
+
+.grid-jogo-pequeno button {
+  font-size: 35px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  opacity: 0.95;
+}
+
+.grid-jogo-pequeno button:hover {opacity: 1;}
