--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,162 @@
+* {
+  font-family: 'Chakra Petch', sans-serif;
+}
+
+:root {
+  font-size: 62.5%; /* 1rem = 10px */
+}
+
+html, body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: brown;
+
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+h1 {
+  font-size: 3.2rem;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+header h1 {
+  color: white;
+  font-weight: bold;
+  text-shadow: 3px 4px black;
+}
+
+#painel-jogo {
+  position: relative;
+  margin-bottom: 2rem;
+
+  width: 90%;
+  height: 90%;
+
+  border: 3px solid black;
+
+  background-color: white;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  gap: 10rem;
+}
+
+#painel-jogo > button {
+  border: 1px solid black;
+
+  font-size: 3.2rem;
+  font-weight: bold;
+
+  color: white;
+  background-color: brown;
+  padding: 1.5rem 3rem;
+
+  border-radius: 3rem;
+
+  cursor: pointer;
+}
+
+#painel-jogo > button:hover {
+  animation: animacao-botao .5s alternate infinite;
+}
+
+@keyframes animacao-botao {
+  from {  
+    padding: 1.5rem 3rem;
+    font-size: 3.2rem;
+    color: white;
+  }
+  to {
+    padding: 1.75rem 3.5rem;
+    font-size: 3.6rem;
+    color: #000000;
+  }
+}
+
+#container-regras {
+  background-color: rgb(219, 210, 210);
+
+  overflow-y: auto;
+  scroll-behavior: smooth;
+
+  padding: 2rem;
+  width: 50%;
+  height: 80%;
+
+  border-radius: 1rem;
+  border: 2px solid black;
+
+  position: absolute;
+}
+
+#container-regras > button {
+  color: rgb(177, 0, 0);
+  background: none;
+  border: none;
+
+  font-size: 1.6rem;
+
+  cursor: pointer;
+
+  margin-left: 95%;
 }
 
 #conteudo-jogo {
-    background-color: black;
+  background-color: black;
 }
 
-
 .grid-jogo {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 5px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 5px;
 }
 
 .grid-jogo-pequeno {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-columns: 50px 50px 50px;
-    grid-template-rows: 50px 50px 50px;
-    gap: 1px;
-    position:relative
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-columns: 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px;
+  gap: 1px;
+  position:relative
 }
 
 .vencedor {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Um fundo escuro transparente */
-    display: none; /* Inicialmente invisível */
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
-    font-weight: bold;
-    color: white;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Um fundo escuro transparente */
+  display: none; /* Inicialmente invisível */
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
 
 }
 
-
 .grid-jogo-pequeno button {
-    font-size: 35px;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    opacity: 0.95;
+  font-size: 35px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  opacity: 0.95;
 }
 
 .grid-jogo-pequeno button:hover {opacity: 1;}
+
+::-webkit-scrollbar {
+  width: 1px;
+}
