--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,6 @@ header h1 {
 
   display: flex;
   justify-content: center;
-
-  gap: 10rem;
 }
 
 #container-botoes-interface {
@@ -122,7 +120,11 @@ header h1 {
 
 #lado-esquerdo, #lado-direito {
   height: 100%;
+  width: 100%;
   border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #conteudo-jogo {
