--- a/css/style.css
+++ b/css/style.css
@@ -36,19 +36,19 @@ header h1 {
 }
 
 #painel-jogo {
+  background-image: url('../imagens/painel2.png'); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   position: relative;
   margin-bottom: 2rem;
-
   width: 90%;
   height: 90%;
-
-  border: 3px solid black;
-
-  background-color: white;
-
+  border: 3px solid #000000;
   display: flex;
   justify-content: center;
 }
+
 
 #container-botoes-interface {
   display: flex;
