--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ html, body {
 body {
   background-color: brown;
 
+  min-width: 850px;
+  min-height: 600px;
+
   display: flex;
   flex-direction: column;
 
@@ -36,6 +39,7 @@ header h1 {
 }
 
 #painel-jogo {
+  padding: 1rem;
   background-image: url('../imagens/painel2.png'); 
   background-size: cover;
   background-repeat: no-repeat;
@@ -89,86 +93,6 @@ header h1 {
     color: #000000;
   }
 }
-
-#container-regras {
-  background-color: rgb(219, 210, 210);
-
-  overflow-y: auto;
-  scroll-behavior: smooth;
-
-  padding: 2rem;
-  width: 50%;
-  height: 80%;
-
-  border-radius: 1rem;
-  border: 2px solid black;
-
-  position: absolute;
-}
-
-#container-regras > button {
-  color: rgb(177, 0, 0);
-  background: none;
-  border: none;
-
-  font-size: 1.6rem;
-
-  cursor: pointer;
-
-  margin-left: 95%;
-}
-
-#lado-esquerdo, #lado-direito {
-  height: 100%;
-  width: 100%;
-  border: 1px solid red;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#conteudo-jogo {
-  background-color: black;
-}
-
-.grid-jogo {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  gap: 5px;
-}
-
-.grid-jogo-pequeno {
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-template-columns: 50px 50px 50px;
-  grid-template-rows: 50px 50px 50px;
-  gap: 1px;
-  position:relative
-}
-
-.vencedor {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); /* Um fundo escuro transparente */
-  display: none; /* Inicialmente invisível */
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
-  font-weight: bold;
-  color: white;
-
-}
-
-.grid-jogo-pequeno button {
-  font-size: 35px;
-  font-weight: bold;
-  border: none;
-  cursor: pointer;
-  opacity: 0.95;
-}
-
-.grid-jogo-pequeno button:hover {opacity: 1;}
 
 ::-webkit-scrollbar {
   width: 1px;
