--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 
 h1 {
   font-size: 3.2rem;
+  background-color: blue;
 }
 
 p {
@@ -36,6 +37,35 @@ header h1 {
   color: white;
   font-weight: bold;
   text-shadow: 3px 4px black;
+}
+
+#nome-jogador {
+  font-size: 16px; 
+}
+
+
+label[for="nome-jogador"] {
+  font-size: 16px; 
+  background-color: white;
+}
+
+#simbolo-jogador {
+  font-size: 16px;
+}
+
+label[for="simbolo-jogador"] {
+  font-size: 16px;
+  background-color: white;
+
+}
+
+#dimensoes-tabuleiro {
+  font-size: 16px;
+}
+
+label[for="dimensoes-tabuleiro"] {
+  font-size: 16px;
+  background-color: white;
 }
 
 #painel-jogo {
