--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,12 @@ label[for="dimensoes-tabuleiro"] {
   margin-bottom: 2rem;
   width: 90%;
   height: 90%;
-  border: 3px solid #000000;
   display: flex;
   justify-content: center;
+  border: 5px solid transparent;
+  border-image: linear-gradient(180deg, black,#00ff00,#0099ff,#001aff,#a200ff,#ff0055,#ff0000,#ffff00,#00ff00,#0099ff,#001aff,black);
+  border-image-slice: 1;
+
 }
 
 
