--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,20 @@ header h1 {
   text-shadow: 3px 4px rgb(12, 1, 1);
 }
 
+
+#primeiro-jogador {
+  text-align: center;
+}
+
+#segundo-jogador {
+  text-align: center;
+}
+
+#tabuleiro{
+  text-align: center;
+}
+
+
 #nome-jogador {
   font-size: 16px; 
 }
@@ -86,6 +100,7 @@ label[for="dimensoes-tabuleiro"] {
   border-image-slice: 1;
 
 }
+
 
 #botao-iniciar {
   width: 450px;
