--- a/css/jogo.css
+++ b/css/jogo.css
@@ -74,7 +74,7 @@ aside.container h1 {
   grid-template-columns: 52px 52px 52px;
   grid-template-rows: 52px 52px 52px;
   gap: 1px;
-
+  border: 20px solid black;
   position: relative;
 }
 
