--- a/css/jogo.css
+++ b/css/jogo.css
@@ -95,7 +95,7 @@ aside.container h1 {
 .grid-jogo-pequeno button {
   font-size: 35px;
   font-weight: bold;
-  border: none;
+  border: 2px solid red;
   cursor: pointer;
   opacity: 0.95;
 }
