--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,9 @@ header h1 {
   font-size: 20px; 
   transition: transform 200ms ease-in-out;
   color: black;
-  background-color: white;
+  background-color: rgb(177, 0, 0);
   cursor: pointer;
+  border-radius: 10px; /* Faz a borda fica arredondada.*/
 }
   
 #botao-iniciar:hover { 
