--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header h1 {
 }
 
 #container-botao-iniciar { /* Refere-se a parte da localização que o botão inicial ocupa.*/
-  padding-top: 5%;
+  padding-top: 10%;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -67,10 +67,10 @@ header h1 {
 }
 
 #botao-iniciar { /* Refere-se ao botão inicial. */
-  font-size: 20px; 
+  font-size: 40px; 
   transition: transform 200ms ease-in-out;
   color: black;
-  background-color: rgb(177, 0, 0);
+  background-color: white;
   cursor: pointer;
   border-radius: 10px; /* Faz a borda fica arredondada.*/
 }
